# py-msbuild-extractor

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: auto-release.yml  build-and-publish.yml
packaging/python-wheel/: MANIFEST.in  README.md  build.ps1  build.sh  pyproject.toml  setup.py
packaging/python-wheel/patches/: 0001-msbuild-locator-hostfxr-fallback.patch  README.md
packaging/python-wheel/src/py_msbuild_extractor/: __init__.py  __main__.py  _launcher.py  _linux_toolchain.py
packaging/python-wheel/tools/: kernel32-shim.c  setup-linux-toolchain.sh
